--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,12 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "type":"module",
-  "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-}
-,
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -26,5 +24,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
+  },
+  "description": ""
 }
