--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "brainstack-server",
+  "name": "human-benchmark",
   "version": "1.0.0",
-  "type": "module",
-  "main": "server.js",
+  "private": true,
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "mongoose": "^8.8.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "helmet": "^7.2.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
+    "vite": "^5.0.0"
   }
 }
